--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ pandas
 google-generativeai
 Pillow
 numpy
-tensorflow>=2.5.0 # Specify a suitable version
+# tensorflow>=2.5.0 # Specify a suitable version
+tensorflow-cpu  
 tensorflow_hub
 scikit-learn
 openpyxl # Needed for reading .xlsx files with pandas
