--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ google-generativeai
 Pillow
 numpy
 # tensorflow>=2.5.0 # Specify a suitable version
-tensorflow==2.17.0
+tensorflow
 tensorflow-hub
 scikit-learn
 openpyxl # Needed for reading .xlsx files with pandas
